[workspace]
members = [
  "bootstrap",
  "rustc",
  "libstd",
  "libtest",
  "librustc_trans",
  "tools/cargotest",
  "tools/clippy",
  "tools/compiletest",
  "tools/error_index_generator",
  "tools/linkchecker",
  "tools/rustbook",
  "tools/unstable-book-gen",
  "tools/tidy",
  "tools/build-manifest",
  "tools/remote-test-client",
  "tools/remote-test-server",
  "tools/rust-installer",
  "tools/rustdoc",
  "tools/rustdoc-themes",
]

# These options are controlled from our rustc wrapper script, so turn them off
# here and have them controlled elsewhere.
[profile.dev]
debug = false
debug-assertions = false
[profile.test]
debug = false
debug-assertions = false

