[workspace]
members = [
  "bootstrap",
  "rustc",
  "libstd",
  "libtest",
  "librustc_codegen_llvm",
  "tools/cargotest",
  "tools/clippy",
  "tools/compiletest",
  "tools/error_index_generator",
  "tools/linkchecker",
  "tools/rustbook",
  "tools/unstable-book-gen",
  "tools/tidy",
  "tools/build-manifest",
  "tools/remote-test-client",
  "tools/remote-test-server",
  "tools/rust-installer",
  "tools/rustdoc",
  "tools/rustdoc-themes",
]

# Curiously, libtest will segfault if compiled with opt-level=3
# with some versions of XCode: https://github.com/rust-lang/rust/issues/50867
[profile.release]
opt-level = 2
[profile.bench]
opt-level = 2

# These options are controlled from our rustc wrapper script, so turn them off
# here and have them controlled elsewhere.
[profile.dev]
debug = false
debug-assertions = false
[profile.test]
debug = false
debug-assertions = false

