[workspace]
members = [
  "bootstrap",
  "rustc",
  "libstd",
  "libtest",
  "librustc_codegen_llvm",
  "tools/cargotest",
  "tools/compiletest",
  "tools/error_index_generator",
  "tools/linkchecker",
  "tools/rustbook",
  "tools/unstable-book-gen",
  "tools/tidy",
  "tools/build-manifest",
  "tools/rust-installer",
  "tools/rustdoc",
  "tools/rustdoc-themes",
]
exclude = [
  "tools/rls/test_data",
]

# Curiously, LLVM 7.0 will segfault if compiled with opt-level=3
# See issue https://github.com/rust-lang/rust/issues/52378
[profile.release]
opt-level = 2
[profile.bench]
opt-level = 2

# These options are controlled from our rustc wrapper script, so turn them off
# here and have them controlled elsewhere.
[profile.dev]
debug = false
debug-assertions = false
[profile.test]
debug = false
debug-assertions = false

[patch.crates-io]
# See comments in `tools/rustc-workspace-hack/README.md` for what's going on
# here
rustc-workspace-hack = { path = 'tools/rustc-workspace-hack' }
